Moment JS Support

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 <link href="css/font-awesome.min.css" rel="stylesheet">
 <link href="css/styles.css" rel="stylesheet">
+<script type="text/javascript" src="js/lib/moment.js"></script>
 <script type="text/javascript" src="js/winkel-calendar.js"></script>
 <script>
 window.onload = function () { 
