theme and input container

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ window.onload = function () {
 		onSelect : onDateChange
 		
 	});		
+	cal.show();
 }
 function onDateChange(date){
 	document.getElementById('container2').innerHTML = date;
