--- a/index.html
+++ b/index.html
@@ -6,30 +6,95 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="theme-color" content="#ffcd00" />
 <title>Insert title here</title>
-<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 <link href="css/font-awesome.min.css" rel="stylesheet">
+<link rel="stylesheet" href="css/main.css">
 <link href="css/styles.css" rel="stylesheet">
 <script type="text/javascript" src="js/lib/moment.js"></script>
 <script type="text/javascript" src="js/winkel-calendar.js"></script>
 <script>
+var cal = null;
 window.onload = function () { 
-	var cal = new WinkelCalendar({
-		container: 'container',
+	cal = new WinkelCalendar({
+		container: 'cuppaDatePickerBanner',
 		bigBanner: true,
 		format : "dd/mm/yyyy",
 		onSelect : onDateChange
 		
-	});		
-	cal.show();
+	});	
+		cal2 = new WinkelCalendar({
+		container: 'cuppaDatePicker',
+		bigBanner: false,
+		format : "dd/mm/yyyy",
+		onSelect : onDateChange
+		
+	});			
 }
 function onDateChange(date){
-	document.getElementById('container2').innerHTML = date;
+	//document.getElementById('container2').innerHTML = date;
 }
+
 </script>
 </head>
 <body>
-<div id="container"></div>
-<div id="container2"></div>
+
+
+
+<nav class="navbar navbar-default navbar-static-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Cuppa Labs</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav nav-pills pull-right">
+            <li><a href="#">Download</a></li>
+            <li><a href="#">Fiddle</a></li>
+            <li><a href="#">Back to Tutorial</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
+<div class="container col-md-6">
+
+      <!-- Main component for a primary marketing message or call to action -->
+      <div class="jumbotron">
+        <h1 class="component-title">Cuppa DatePicker<span><br>with JavaScript</span></h1>
+        <p>Cool JavaScript DatePicker for Web and Mobile</p>
+           <ul class="nav nav-pills">
+            <li class="active"><a href="index.html">Demo 1</a></li>
+            <li><a href="index2.html">Demo 2</a></li>
+            <li><a href="index3.html">Demo 3</a></li>
+            <li><a href="index4.html">Demo 4</a></li>
+          </ul>
+      </div>
+
+    </div>
+	    <div class="container datepicker-container col-md-3">
+		<div id="cuppaDatePickerBanner"></div>
+		<div class="methods">
+			<button class="btn btn-info btn-sm" onClick="cal.show()">Open</button>
+			<button class="btn btn-info btn-sm" onClick="cal.hide()">Close</button>
+			<button class="btn btn-info btn-sm" onClick="cal.today()">Today</button>
+		</div>
+		
+    </div>
+	<div class="container datepicker-container col-md-3">
+		<div id="cuppaDatePicker"></div>
+		<div class="methods">
+			<button class="btn btn-info btn-sm" onClick="cal2.show()">Open</button>
+			<button class="btn btn-info btn-sm" onClick="cal2.hide()">Close</button>
+			<button class="btn btn-info btn-sm" onClick="cal2.today()">Today</button>
+		</div>
+    </div>
 
 </body>
 </html>
