--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ function onDateChange(date){
       </div>
     </nav> 
 
-<!-- <div class="container col-sm-12 col-md-12 col-lg-6">
+<div class="container col-sm-12 col-md-12 col-lg-6">
 
       <div class="jumbotron">
         <h1 class="component-title">Cuppa DatePicker<span><br>with JavaScript</span></h1>
@@ -74,7 +74,7 @@ function onDateChange(date){
           </ul>
       </div>
 
-    </div> -->
+    </div>
 	    <div class="container datepicker-container col-sm-6 col-md-6 col-lg-3">
 		<div id="cuppaDatePickerBanner"></div>
 		<div class="methods">
