--- a/index.html
+++ b/index.html
@@ -92,6 +92,14 @@ function onDateChange(date){
 			<button class="btn btn-info btn-sm" onClick="cal2.setDate('2017-5-1')">SetDate</button>
 		</div>
     </div>
-
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- FanMenu Ad -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:320px;height:100px"
+     data-ad-client="ca-pub-4525567075133342"
+     data-ad-slot="1008857902"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 </html>
